cabal-version:      3.0
name:               io-streams-ascii
version:            1.0.0
synopsis:           Support for io-streams with text-ascii.
description:
  Provides support for streaming ASCII text using the io-streams framework.

homepage:           https://github.com/kozross/io-streams-ascii
license:            GPL-3.0-or-later
license-file:       LICENSE.md
author:             Koz Ross
maintainer:         koz.ross@retro-freedom.nz
bug-reports:        https://github.com/kozross/io-streams-ascii/issues
copyright:          (C) Koz Ross 2021
category:           IO-Streams
tested-with:        GHC ==8.6.5 || ==8.8.4 || ==8.10.3
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

common common-lang
  build-depends:    base >=4.12 && <5
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -Werror

  default-language: Haskell2010

library
  import:          common-lang
  exposed-modules:
    System.IO.Streams.Ascii
    System.IO.Streams.Ascii.Exceptional

  build-depends:
    , bytestring  ^>=0.11.0.0
    , io-streams  ^>=1.5.2.0
    , text-ascii  ^>=1.0.0

  hs-source-dirs:  src
